# project-bogosort

./: README.md  pyproject.toml
00_analysis/: eda-v1.1
00_analysis/01_features/: 01_train_test_split_and_features.ipynb  build_features.py  sanity_check.py  slang_word_count.py  syntactic_features.py
00_analysis/02_models/: core_logistic_regression_ridge.py  core_vector_machine.py
00_analysis/02_models/ridge_outputs/: ridge_model.pkl  ridge_scaler.pkl
00_analysis/05_EDA/: eda_template.ipynb  eda_v1_2.ipynb
analysis/evaluation_code/: error_analysis.py  evaluator.py  feature_evaluation.py
analysis/features/: sanity_check.py
analysis/models/: core_logistic_regression_lasso.py  error_analysis.py  evaluator.py  feature_evaluation.py  hypertuning_parameters.py  rf_feature_selection.py
analysis/models/artifacts/: best_model.pkl  dummy__20260415_135444.pkl  lasso_20260416_141626.pkl  random_forest_selected.pkl
analysis/models/baseline/: baseline_model.py
analysis/pipeline_and_dispatch/: data_pipeline.py  run_model.py
analysis_and_inference/evaluation_code/: empirical_runtime_1.2.ipynb  runtime_analysis_features.ipynb  runtime_analysis_models.ipynb
app/app/: __init__.py  config.py
app/data/: model_evaluations.json  top_toxic_words.npy
app/db/: test_articles.db
app/routes/: bogosort.py
app/services/: sorting_service.py
data/processed/: bert_test.pkl  bert_train.pkl  test_train_data.pkl  tfidf_test.npz  tfidf_train.npz  train_data.pkl
test/: test_build_features.py  test_models.py
tests/: test_build_features.py  test_core_vector_machine.py
(+33 files in other folders)
